--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 Sample Code for Using formatting JSON in Python and Receiving it JS using jQuery AJAX. 
+
+For More bootstrap UI element examples visit:
+bootsnipp.com
